# ghost-memory

./: .gitignore  README.md  pyproject.toml
docs/: commands.md  faq.md  how-it-works.md  lot-a-diagnostic-replay.md  lot-b-remesure.md  lot-c-premier-km.md  privacy.md
examples/: git-detached-head-recovery.md
ghost/: __init__.py  account.py  benchmarks.py  cli.py  create.py  db.py  deploy.py  detect.py  distill.py  doctor.py  ingest.py  manage.py  network.py  onboard.py  parse.py  pipeline.py  redact.py  replay.py  resolve.py  scan.py  signature.py  telemetry.py  trace.py  ui.py  validate.py  watch.py
tests/: test_account.py  test_benchmarks.py  test_create.py  test_deploy.py  test_detect.py  test_distill.py  test_ingest.py  test_network.py  test_onboard.py  test_packaging.py  test_resolve.py  test_signature.py  test_validate.py  test_watch.py
tests/fixtures/projects/-Users-test-demoapp/: 11111111-1111-1111-1111-111111111111.jsonl
tests/fixtures/projects/-Users-test-demoapp/11111111-1111-1111-1111-111111111111/subagents/: agent-abc123def456.jsonl  agent-abc123def456.meta.json
tests/fixtures/projects/-Users-test-demoapp/11111111-1111-1111-1111-111111111111/subagents/workflows/wf_test1234-abc/: agent-def789fedcba.jsonl  agent-def789fedcba.meta.json  journal.jsonl
tests/fixtures/projects/-Users-test-otherproj/: 22222222-2222-2222-2222-222222222222.jsonl
