[project]
name = "ghost-brain"
version = "0.1.0"
description = "Ghost Brain — extraction de skills réutilisables depuis l'historique Claude Code"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "anthropic>=0.117.0",
]

[project.scripts]
ghost = "ghost.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghost"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
